# billet

./: .env.example  .gitignore  Makefile  README.md
deploy/compose/: docker-compose.dev.yml
deploy/compose/gateway/: default.conf
deploy/compose/postgres/init/: 00-init-databases.sh
deploy/compose/scripts/: smoke.sh
services/auth/: .dockerignore  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
services/auth/migrations/: env.py
services/auth/migrations/versions/: 0001_initial.py
services/auth/src/auth/: __init__.py  config.py  deps.py  main.py  models.py  schemas.py  security.py
services/auth/src/auth/routers/: auth.py  health.py  jwks.py
services/auth/tests/: conftest.py  test_auth_flow.py  test_health.py  test_jwks.py  test_security.py
services/catalog/: Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
services/catalog/migrations/: env.py
services/catalog/migrations/versions/: 0001_initial.py
services/catalog/src/catalog/: __init__.py  config.py  db.py  deps.py  logging.py  main.py  models.py  schemas.py  security.py  service.py
services/catalog/src/catalog/routers/: events.py  health.py  internal.py  tiers.py
services/catalog/tests/: conftest.py  test_authz.py  test_events.py  test_health.py  test_internal.py  test_tiers.py
