[project]
name = "billet-auth"
version = "0.1.0"
description = "billet auth service — users, credentials, RS256 JWT issuance + JWKS (D8, §3.1)"
requires-python = "==3.12.*"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic[email]>=2.10",
    "pydantic-settings>=2.7",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "structlog>=24.4",
    "argon2-cffi>=23.1",
    "pyjwt[crypto]>=2.10",
    "uuid-utils>=0.10",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "testcontainers[postgres]>=4.9",
    "psycopg2-binary>=2.9",
    "ruff>=0.9",
    "mypy>=1.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auth"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom relies on calls in argument defaults.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
packages = ["auth"]
mypy_path = "src"
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["testcontainers.*", "psycopg2.*"]
ignore_missing_imports = true
